Sun Sep 15 18:03:56 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	- fix error dropping statement (do not cancel other results)
	- more compatibility converting to sql strings
	- fix numeric binding on output
	- added other type support to SQLColAttributes
	- workaround for SQLTables results from Sybase
	* src/odbc/prepare_query.c:
	- remove escaped sequences, do not stop on first call

Sat Sep 14 15:55:26 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am  use $DOCBOOK_DSL to find jade files, manpages depend on inputs (!)
	* doc/api_status.txt 	added dbversion, DBTDS
	* doc/tsql.txt		added information about getting the TDS version.
	* include/sybdb.h	added dbversion, DBTDS, dbtds
	* include/tds.h.in	added tds_version
	* src/apps/tsql.c	added "version" and "GO" magic words
	* src/dblib/dblib.c	added dbversion, dbtds
	* src/tds/iconv.c	made iconv inputs const again
	* src/tds/util.c	added tds_version
	
Sat Sep 14 15:45:07 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/t0002.c:
	- fix for thread safe compiled with iODBC
	- check for out of memory connectiong
	- do not try to read PWD and UID from ini (never there)
	- user server in ini file for compatibility with windows
	- fix return of SQLColAttributes and a small buffer overflow
	- return correct value from SQLFreeHandle
	- handle some other type in ODBC
	- add test to check no drop of data dropping statement

Sat Sep 14  8:41:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c: return NULL on out-of-memory, do not core

Fri Sep 13 19:39:31 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/convert.c:
	- Fix my stupid mistakes in revision 1.71 of convert.c.
	  Casting these chars to int would just mask the problem instead of