@@ -4,4 +4,4 @@ LDADD     =    ../tds/libtds.la
 freebcp_LDADD     =    ../dblib/libsybdb.la
 
 freebcp_SOURCES = freebcp.c freebcp.h
-
+tsql_LDADD	= $(READLINE_LIBS) $(LDADD)
